--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^16.2.0",
     "react-native": "^0.52.1",
     "react-native-web": "^0.3.2",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.0",
     "styled-components": "^3.0.2",
     "stylesheet": "^0.9.1"
   },
